Cycles crash blender every time I press render #35251

Closed
opened 2013-05-08 05:04:55 +02:00 by Serj Maiorov · 25 comments

%%%--- Operating System, Graphics card ---
i7, Windows 7 64 bit, GeForce GTS 450

- Blender version with error, and version that worked ---

2.67 64 bit crash
2.67 32 bit work
2.66a 64 bit work

- Short description of error ---

Every time I open Blender 2.67 - 64 bit, the moment I try to Render with Cycles it just closes Blender. Viewport render causes closing and regular render (F12 or the UI button) just crashes it. Both CPU and GPU.
Apparently the 32 bit version works.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

No idea how to replicate this since it crashes on start up file.%%%

%%%--- Operating System, Graphics card --- i7, Windows 7 64 bit, GeForce GTS 450 - Blender version with error, and version that worked --- 2.67 64 bit crash 2.67 32 bit work 2.66a 64 bit work - Short description of error --- Every time I open Blender 2.67 - 64 bit, the moment I try to Render with Cycles it just closes Blender. Viewport render causes closing and regular render (F12 or the UI button) just crashes it. Both CPU and GPU. Apparently the 32 bit version works. - Steps for others to reproduce the error (preferably based on attached .blend file) --- No idea how to replicate this since it crashes on start up file.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%The build works for me, I tested this of course before uploading the binaries. Default cube + some files from the test suite worked.
Can anyone else confirm the problem?

%%%

%%%The build works for me, I tested this of course before uploading the binaries. Default cube + some files from the test suite worked. Can anyone else confirm the problem? %%%

%%%No, tested with 2.67 on:
Laptop with Intel i965
Workstation with i5, GTX 550Ti, GTX 560Ti 448 and both cards.
Both on Opensuse 12.3/64

Cheers, mib.%%%

%%%No, tested with 2.67 on: Laptop with Intel i965 Workstation with i5, GTX 550Ti, GTX 560Ti 448 and both cards. Both on Opensuse 12.3/64 Cheers, mib.%%%
Author

%%%Is there a site with svn repository to track down the revision with the sudden change? Because I had a version a bit after 2.66a (to test sss) and it still worked.
Graphicall limits the amount of svn so I couldn't track it there.%%%

%%%Is there a site with svn repository to track down the revision with the sudden change? Because I had a version a bit after 2.66a (to test sss) and it still worked. Graphicall limits the amount of svn so I couldn't track it there.%%%

%%%I can't redo any crash on Windows 7 64 bit either. Does the buildbot build work?
http://builder.blender.org/download/%%%

%%%I can't redo any crash on Windows 7 64 bit either. Does the buildbot build work? http://builder.blender.org/download/%%%

%%%I can repro on Windows 7 64Bit SP1 100%

Got it here
http:*www.blender.org/dl/http:*ftp.nluug.nl/pub/graphics/blender/release//Blender2.67/blender-2.67-windows64.zip

Would be cool to have a crash report and get a call stack of some kind, debug version ?

%%%

%%%I can repro on Windows 7 64Bit SP1 100% Got it here http:*www.blender.org/dl/http:*ftp.nluug.nl/pub/graphics/blender/release//Blender2.67/blender-2.67-windows64.zip Would be cool to have a crash report and get a call stack of some kind, debug version ? %%%

%%%Issue still present in 2.67-r56638 may 10th build

%%%

%%%Issue still present in 2.67-r56638 may 10th build %%%

%%%Ok, well at least it's not "the" build (official 2.67), so it must be a bug in the code itself, but I still have no luck with it. :/%%%

%%%Ok, well at least it's not "the" build (official 2.67), so it must be a bug in the code itself, but I still have no luck with it. :/%%%
Author

%%%Well I found the crash log, but I don't think it will help you much:

Blender 2.67 (sub 0), Revision: 56533

bpy.context.scene.render.engine = 'CYCLES' # Property
bpy.data.screens["Default"].(null) = 'RENDERED' # Property%%%

%%%Well I found the crash log, but I don't think it will help you much: # Blender 2.67 (sub 0), Revision: 56533 bpy.context.scene.render.engine = 'CYCLES' # Property bpy.data.screens["Default"].(null) = 'RENDERED' # Property%%%

%%%Windows indeed does not give useful backtraces.

Can you do Load Factory Settings (this is not permanent), then render and see if it still crashes?

Can either of you think of something particular in your system setup? Is it a laptop with dual intel / nvidia GPU perhaps? What is the nvidia driver version? Maybe attach Help > System Info.%%%

%%%Windows indeed does not give useful backtraces. Can you do Load Factory Settings (this is not permanent), then render and see if it still crashes? Can either of you think of something particular in your system setup? Is it a laptop with dual intel / nvidia GPU perhaps? What is the nvidia driver version? Maybe attach Help > System Info.%%%
Member

%%%Serj: you have to treat this as a problem you have in your system or configuration of files.
Obviously this is just meant to work, and it works fine for nearly everyone :)

Once you locate the error there, we can check what's possible to fix. There's a lot of ways to check... like:

  • move your startup.blend away to backup location, this will make blender start in default factory for sure.
  • check if any previous 64 blender release ever worked - if not, then it's really a local issue
  • test it on another system
  • etc%%%
%%%Serj: you have to treat this as a problem you have in your system or configuration of files. Obviously this is just meant to work, and it works fine for nearly everyone :) Once you locate the error there, we can check what's possible to fix. There's a lot of ways to check... like: - move your startup.blend away to backup location, this will make blender start in default factory for sure. - check if any previous 64 blender release ever worked - if not, then it's really a local issue - test it on another system - etc%%%
Author

%%%Hi!
Deleted the start-up file - Still doesn't work.

2.66a with 64 bit - worked (Just installed it again to check).
Tried the latest revision from buildbot just in case (2.67 r56680, 64 bit) - didn't work.

Tried a 32 bit version - Worked.

i7 920 @ 2.67GHz
GeForce GTS 450 - Driver Version: 314.22

Don't know if it will help, but this is the Windows crash log:
Problem signature:

Problem Event Name:	APPCRASH
Application Name:	blender.exe
Application Version:	2.6.7.0
Application Timestamp:	51893be3
Fault Module Name:	blender.exe
Fault Module Version:	2.6.7.0
Fault Module Timestamp:	51893be3
Exception Code:	c0000005
Exception Offset:	00000000004fe09b
OS Version:	6.1.7600.2.0.0.256.1
Locale ID:	1037
Additional Information 1:	db14
Additional Information 2:	db142d94bf77310257fe8dec728dd9f2
Additional Information 3:	96a2
Additional Information 4:	96a24fe483d5ad1c219f30a09fbe397f

Will try to find another PC with a GTS 450 to test%%%

%%%Hi! Deleted the start-up file - Still doesn't work. 2.66a with 64 bit - worked (Just installed it again to check). Tried the latest revision from buildbot just in case (2.67 r56680, 64 bit) - didn't work. Tried a 32 bit version - Worked. i7 920 @ 2.67GHz GeForce GTS 450 - Driver Version: 314.22 Don't know if it will help, but this is the Windows crash log: Problem signature: ``` Problem Event Name: APPCRASH Application Name: blender.exe Application Version: 2.6.7.0 Application Timestamp: 51893be3 Fault Module Name: blender.exe Fault Module Version: 2.6.7.0 Fault Module Timestamp: 51893be3 Exception Code: c0000005 Exception Offset: 00000000004fe09b OS Version: 6.1.7600.2.0.0.256.1 Locale ID: 1037 Additional Information 1: db14 Additional Information 2: db142d94bf77310257fe8dec728dd9f2 Additional Information 3: 96a2 Additional Information 4: 96a24fe483d5ad1c219f30a09fbe397f ``` Will try to find another PC with a GTS 450 to test%%%

%%%I loaded factory settings and this fixed the issue.
I have been using this settings file for many versions.

All good now!

Thanks!

%%%

%%%I loaded factory settings and this fixed the issue. I have been using this settings file for many versions. All good now! Thanks! %%%

%%%Serj: Do you also have tried with "Load factory settings"? %%%

%%%Serj: Do you also have tried with "Load factory settings"? %%%
Author

%%%Youreka!!!!!!!!!!!!!!!!!
It worked!
I'm so sorry for the inconvenience! I deleted all Blender traces I found out of my system just in case. But only the Load Factory worked!
I thought that I have to buy a new card...
Thank you very much! The bug can be closed now%%%

%%%Youreka!!!!!!!!!!!!!!!!! It worked! I'm so sorry for the inconvenience! I deleted all Blender traces I found out of my system just in case. But only the Load Factory worked! I thought that I have to buy a new card... Thank you very much! The bug can be closed now%%%
Author

%%%Ah, wait. It works after I load factory settings, but it doesn't save the change, even after I save user preferences and start-up file. So I have to Load factory setting every time I open Blender%%%

%%%Ah, wait. It works after I load factory settings, but it doesn't save the change, even after I save user preferences and start-up file. So I have to Load factory setting every time I open Blender%%%
Member

%%%Serj open up explorer and go to %appdata% or c:\Users<username>\Application data\ and look for blender foundation directory there and get rid of if tf you had not already.
%%%

%%%Serj open up explorer and go to %appdata% or c:\Users\<username>\Application data\ and look for blender foundation directory there and get rid of if tf you had not already. %%%

%%%Saving user preferences should work, not sure why it doesn't. Only thing I can think of is that recently startup file saving and user preferences saving was changed, so you have to do Save User Settings in the User Preferences now to save it. But probably you already knew this.%%%

%%%Saving user preferences should work, not sure why it doesn't. Only thing I can think of is that recently startup file saving and user preferences saving was changed, so you have to do Save User Settings in the User Preferences now to save it. But probably you already knew this.%%%
Author

%%%Got rid of the %appdata% files, don't work.
Found a weird solution - Installed the previous version (2.66), loaded factory settings, saved new startup file and user preferences. Installed the 2.67 version, copied manually the 2.66 config files to the new version, worked.%%%

%%%Got rid of the %appdata% files, don't work. Found a weird solution - Installed the previous version (2.66), loaded factory settings, saved new startup file and user preferences. Installed the 2.67 version, copied manually the 2.66 config files to the new version, worked.%%%
Author

%%%Unfortunately this solution works only on official installed release. Tried to render with a Buildbot zipped release and didn't work.
Well, at least I can render Cycles on 2.67 for now.%%%

%%%Unfortunately this solution works only on official installed release. Tried to render with a Buildbot zipped release and didn't work. Well, at least I can render Cycles on 2.67 for now.%%%
Author

%%%And another weird thing - The same crash happens now in 2.67 when I open older blend files that I created back with 2.66.%%%

%%%And another weird thing - The same crash happens now in 2.67 when I open older blend files that I created back with 2.66.%%%
Member

%%%This remains very confusing ... try to limit all the variables.

  • Only use the official binary releases from blender.org (not build bot versions, not graphical.org ones, not own compiles).
  • Start blender 2.66 via a Commandline - on start it prints where the user prefs are read from
  • Delete all of the 2.6x directories there then, or move it away.
  • Quit 2.66, and start it again.
  • Save in 2.66 new user prefs and startup. Check if thats the same path as loaded before.
  • Start 2.67. It should give empty splash with option to copy prefs. use the option

If 2.67 then crashes, put the startup and userpref.blend here in the tracker %%%

%%%This remains very confusing ... try to limit all the variables. - Only use the official binary releases from blender.org (not build bot versions, not graphical.org ones, not own compiles). - Start blender 2.66 via a Commandline - on start it prints where the user prefs are read from - Delete all of the 2.6x directories there then, or move it away. - Quit 2.66, and start it again. - Save in 2.66 new user prefs and startup. Check if thats the same path as loaded before. - Start 2.67. It should give empty splash with option to copy prefs. use the option If 2.67 then crashes, put the startup and userpref.blend here in the tracker %%%
Author

%%%Did all the steps above, worked. But it's the same solution I made only manually. Which means that if I didn't have the 2.66 startup files to copy, a fresh 2.67 will crush Cycles.
And it inherit the same problems: Old files made on 2.66 - crush Blender 2.67.

Attaches are the "damaged" startup files that 2.67 64bit creates:
http://www.pasteall.org/blend/21480
http://www.pasteall.org/blend/21481

By the way - The 32 bit version works fine, but 32's created config files still crush the 64 version. Weird.%%%

%%%Did all the steps above, worked. But it's the same solution I made only manually. Which means that if I didn't have the 2.66 startup files to copy, a fresh 2.67 will crush Cycles. And it inherit the same problems: Old files made on 2.66 - crush Blender 2.67. Attaches are the "damaged" startup files that 2.67 64bit creates: http://www.pasteall.org/blend/21480 http://www.pasteall.org/blend/21481 By the way - The 32 bit version works fine, but 32's created config files still crush the 64 version. Weird.%%%

%%%Thanks for the files, they helped find the issue, fix in svn now.%%%

%%%Thanks for the files, they helped find the issue, fix in svn now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35251
No description provided.