Fix #35251: cycles crash rendering with a particular user preferences configuration.